--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <%= "I love " + "Ruby!!" %>
+    <% if 1 == 2 %>
+  <p>1 equals 2.</p>
+<% else %>
+  <p>1 does not equal 2.</p>
+<% end %>
   </body>
 </html>
