--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body>
-  <% if 1 == 2 %>
-    <p>1 equals 2.</p>
-  <% else %>
-    <p>1 does not equal 2.</p>
-  <% end %>
+    <ul>
+      <% squares = [1, 4, 9, 16] %>
+      <% squares.each do |square| %>
+        <li><%= square %></li>
+      <% end %>
+    </ul>
   </body>
 </html>
